--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.22.0",
+    "@azure/msal-react": "^2.0.22",
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -19,7 +21,8 @@
     "apexcharts": "^3.53.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
