--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "apexcharts": "^3.53.0",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
