feat(dashboard): :ambulance: Show latest changes on dashboard module

--- a/.env
+++ b/.env
@@ -18,3 +18,4 @@ VITE_USA_TRAVEL_TIMES_TABLE=tblOVvLYjaxM101Zr
 VITE_USA_WORKED_TIMES_TABLE=tbliMYmHlgdML4Cno
 VITE_USA_WAITING_TIMES_TABLE=tblTPlQLbKaGh3F7q
 VITE_USA_PROJECTS_TABLE=tblV8eyfsiSGTUe9l
+VITE_USA_TIMES_BY_DAY_TABLE=tblFaLqjO6bEIgOL0
