--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
 # ACCESS
-AIRTABLE_ACCESS_TOKEN=
-AIRTABLE_HOST=https://api.airtable.com/v0
+VITE_AIRTABLE_ACCESS_TOKEN=
+VITE_AIRTABLE_HOST=https://api.airtable.com/v0
 
 # PURCHASES
-USA_PURCHASES_BASE=
-USA_PURCHASES_TABLE=
+VITE_USA_PURCHASES_BASE=
+VITE_USA_PURCHASES_TABLE=
 
 # SALES
-USA_SALES_BASE=
-USA_COST_ANALYSIS_TABLE=
-USA_CA_PHASES_TABLE=
-USA_CA_LABOR_DETAILS_TABLE=
+VITE_USA_SALES_BASE=
+VITE_USA_COST_ANALYSIS_TABLE=
+VITE_USA_CA_PHASES_TABLE=
+VITE_USA_CA_LABOR_DETAILS_TABLE=
 
 # OPERATIONS
-USA_OPERATIONS_BASE=
-USA_TRAVEL_TIMES_TABLE=
-USA_WORKED_TIMES_TABLE=
-USA_WAITING_TIMES_TABLE=
-USA_PROJECTS_TABLE=
+VITE_USA_OPERATIONS_BASE=
+VITE_USA_TRAVEL_TIMES_TABLE=
+VITE_USA_WORKED_TIMES_TABLE=
+VITE_USA_WAITING_TIMES_TABLE=
+VITE_USA_PROJECTS_TABLE=
